--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 .dropdown-content a:hover {
   background-color: #ddd;
 }
-
+  #draggable{width:500px;height:550px;}
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
