--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ height:500px;
 height:455px;
 border-bottom-left-radius:30px;
 border-bottom-right-radius:30px;
-background:white;
+background:transparent;
 }
 </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
