--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ margin:-10px;
 }
 
 /* Page content */
-.content {
+.content1 {
   padding: 16px;
 }
 
@@ -423,7 +423,7 @@ height:500px;
 height:455px;
 border-bottom-left-radius:30px;
 border-bottom-right-radius:30px;
-background:transparent;
+background:white;
 }
 </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
